tests/NormalTests/paczka1/fuzzy1/92200430.err
Error in line 2: VyIATMwO8 S994 8,3
Error in line 5: IJt S994 62,9
Error in line 14: VyIATMwO8 S994 39,9
Error in line 28: rb2T A986 20,7
Error in line 16: VyIATMwO8 S961 68,7
